# structurer-api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  http_ca.crt  pyproject.toml  requirements.txt
src/structurer_api/: __init__.py  main.py
src/structurer_api/routers/: codeSystems.py  example.py  parse_input.py  structurer.py
src/structurer_api/utils/: Models.py  parse_input.py  prompts.py  structurer_models.py  utils.py
