[project]
name = "structurer-api"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ItIsGreg", email = "g.nageler@web.de" }
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0.post1",
    "PyPDF2>=3.0.1",
    "pytesseract>=0.3.10",
    "langchain>=0.0.27",
    "openai>=1.2.1",
    "python-multipart>=0.0.6",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.scripts]
start = "uvicorn src.structurer_api.main:app --reload"
